--- a/brokenmetaljewelry/src/particlesjs-config.json
+++ b/brokenmetaljewelry/src/particlesjs-config.json
@@ -1,7 +1,7 @@
 {
     "particles": {
       "number": {
-        "value": 80,
+        "value": 180,
         "density": {
           "enable": true,
           "value_area": 800
@@ -11,18 +11,13 @@
         "value": "#ffffff"
       },
       "shape": {
-        "type": "circle",
+        "type": "helix",
         "stroke": {
-          "width": 0,
+          "width": 0.2,
           "color": "#000000"
         },
         "polygon": {
-          "nb_sides": 5
-        },
-        "image": {
-          "src": "img/github.svg",
-          "width": 100,
-          "height": 100
+          "nb_sides": 7
         }
       },
       "opacity": {
@@ -36,7 +31,7 @@
         }
       },
       "size": {
-        "value": 3,
+        "value": 13,
         "random": true,
         "anim": {
           "enable": false,
@@ -47,14 +42,14 @@
       },
       "line_linked": {
         "enable": true,
-        "distance": 150,
+        "distance": 190,
         "color": "#ffffff",
-        "opacity": 0.4,
+        "opacity": 0.1,
         "width": 1
       },
       "move": {
         "enable": true,
-        "speed": 6,
+        "speed": 1,
         "direction": "none",
         "random": false,
         "straight": false,
