particles are successfully behind the buttons

--- a/brokenmetaljewelry/src/particlesjs-config.json
+++ b/brokenmetaljewelry/src/particlesjs-config.json
@@ -43,7 +43,7 @@
       "line_linked": {
         "enable": true,
         "distance": 190,
-        "color": "#ffffff",
+        "color": "#09012e",
         "opacity": 0.1,
         "width": 1
       },
