--- a/brokenmetaljewelry/package.json
+++ b/brokenmetaljewelry/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "madrodgerflynn.github.io/brokenMetalJewelry/",
+  "homepage": "https://madrodgerflynn.github.io/brokenMetalJewelry/",
   "name": "brokenmetaljewelry",
   "version": "0.1.0",
   "private": true,
