--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
     "version": 2,
     "builds": [
-       { "src":
+       { 
+        "src":
 "*.js",
-"use": "@vercel/node" } ]
+"use": "@vercel/node" } ],
+"routes": [
+    {
+        "src": "./(.*)",
+        "dest": "/"
+    }
+]
 }
